--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
 
     <application
@@ -24,22 +25,18 @@
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-6202710455352099~4109402563"/>
 
-
         <activity
-            android:name=".activities.impl.SplashActivity"
+            android:theme="@style/Theme.App.Starting"
+            android:name=".activities.impl.MainActivity"
             android:exported="true"
-            android:noHistory="true">
+            android:launchMode="singleTask"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".activities.impl.MainActivity"
-            android:exported="true"
-            />
 
         <activity android:name=".activities.impl.MainMenuActivity" android:exported="true">
             <intent-filter>
