--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,8 +26,13 @@
         android:theme="@style/Theme.RobuxEarny"
         android:usesCleartextTraffic="true"
         android:hardwareAccelerated="true"
-        tools:targetApi="31"
+        tools:targetApi="34"
         android:networkSecurityConfig="@xml/network_security_config">
+
+        <property
+            android:name="android.adservices.AD_SERVICES_CONFIG"
+            android:resource="@xml/gma_ad_services_config"
+            tools:replace="android:resource" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
