--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,13 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activities.impl.BoostersActivity" android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+            </intent-filter>
+        </activity>
+
+
     </application>
 
 </manifest>
