--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RobuxEarny"
         android:usesCleartextTraffic="true"
-        tools:targetApi="34">
+        tools:targetApi="35">
 
         <property
             android:name="android.adservices.AD_SERVICES_CONFIG"
@@ -62,8 +62,7 @@
 
         <activity
             android:name=".activities.impl.games.TicketActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
@@ -95,8 +94,7 @@
 
         <activity
             android:name=".activities.impl.games.SlotMachineActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
