--- a/versions.properties
+++ b/versions.properties
@@ -29,6 +29,13 @@ version.kotlin=2.0.10
 ## # available=2.0.20-Beta1
 ## # available=2.0.20-Beta2
 ## # available=2.0.20-RC
+## # available=2.0.20-RC2
+## # available=2.0.20
+## # available=2.0.21-RC
+## # available=2.0.21
+## # available=2.1.0-Beta1
+## # available=2.1.0-Beta2
+## # available=2.1.0-RC
 
 version.junit.junit=4.13.2
 
@@ -44,6 +51,9 @@ version.google.android.material=1.12.0
 ##                  # available=1.13.0-alpha02
 ##                  # available=1.13.0-alpha03
 ##                  # available=1.13.0-alpha04
+##                  # available=1.13.0-alpha05
+##                  # available=1.13.0-alpha06
+##                  # available=1.13.0-alpha07
 
 ## unused
 version.firebase-perf=21.0.1
@@ -64,6 +74,11 @@ version.firebase-firestore=25.0.0
 version.firebase-crashlytics=19.0.3
 
 version.firebase-bom=33.1.2
+##       # available=33.2.0
+##       # available=33.3.0
+##       # available=33.4.0
+##       # available=33.5.0
+##       # available=33.5.1
 
 ## unused
 version.firebase-auth-ktx=23.0.0
@@ -80,21 +95,31 @@ version.firebase-analytics-ktx=22.0.2
 ## unused
 version.firebase-analytics=22.0.2
 
+## unused
 version.com.scottyab..rootbeer-lib=0.1.0
 
+## unused
 version.com.google.guava..guava=33.2.1-android
 ##                  # available=33.2.1-jre
+##                  # available=33.3.0-android
+##                  # available=33.3.0-jre
 
+## unused
 version.com.google.code.gson..gson=2.11.0
 
+## unused
 version.com.google.android.ump..user-messaging-platform=3.0.0
 
+## unused
 version.com.google.android.libraries.identity.googleid..googleid=1.1.1
 
+## unused
 version.com.github.MakeOpinionGmbH..cpx-research-SDK-Android=1.5.9
 
+## unused
 version.com.appodeal.ads..sdk=3.3.2.0
 
+## unused
 version.com.android.volley..volley=1.2.1
 
 version.androidx.test.ext.junit=1.2.1
@@ -102,9 +127,18 @@ version.androidx.test.ext.junit=1.2.1
 version.androidx.test.espresso=3.6.1
 
 version.androidx.lifecycle=2.8.4
+##             # available=2.8.5
+##             # available=2.8.6
+##             # available=2.8.7
+##             # available=2.9.0-alpha01
+##             # available=2.9.0-alpha02
+##             # available=2.9.0-alpha03
+##             # available=2.9.0-alpha04
+##             # available=2.9.0-alpha05
+##             # available=2.9.0-alpha06
 
 ## unused
-version.androidx.databinding=8.5.0
+version.androidx.databinding=8.6.0
 
 version.androidx.credentials=1.2.2
 ##               # available=1.3.0-alpha01
@@ -114,13 +148,19 @@ version.androidx.credentials=1.2.2
 ##               # available=1.3.0-beta01
 ##               # available=1.3.0-beta02
 ##               # available=1.3.0-rc01
+##               # available=1.3.0
 ##               # available=1.5.0-alpha01
 ##               # available=1.5.0-alpha02
 ##               # available=1.5.0-alpha03
+##               # available=1.5.0-alpha04
+##               # available=1.5.0-alpha05
+##               # available=1.5.0-alpha06
+##               # available=1.5.0-beta01
 
 version.androidx.core-splashscreen=1.1.0-alpha02
 ##                     # available=1.1.0-rc01
 ##                     # available=1.2.0-alpha01
+##                     # available=1.2.0-alpha02
 
 version.androidx.constraintlayout=2.1.4
 ##                    # available=2.2.0-alpha01
@@ -136,10 +176,16 @@ version.androidx.constraintlayout=2.1.4
 ##                    # available=2.2.0-alpha11
 ##                    # available=2.2.0-alpha12
 ##                    # available=2.2.0-alpha13
+##                    # available=2.2.0-alpha14
+##                    # available=2.2.0-beta01
+##                    # available=2.2.0-rc01
+##                    # available=2.2.0
 
 version.androidx.appcompat=1.7.0
 
 version.android.billingclient=7.0.0
+##                # available=7.1.0
+##                # available=7.1.1
 
 plugin.com.google.gms.google-services=4.4.2
 
@@ -151,4 +197,4 @@ plugin.com.google.firebase.crashlytics=2.9.9
 ##                         # available=3.0.2
 
 ## unused
-plugin.android=8.5.0
+plugin.android=8.6.0
