--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,8 +12,10 @@ com-google-firebase-firebase-perf = { id = "com.google.firebase.firebase-perf", 
 
 [versions]
 
+appsprize = "2.0.0"
 desugar_jdk_libs = "2.0.4"
 gdxVersion = "1.13.0"
+glide = "4.16.0"
 retrofit2 = "2.11.0"
 
 androidx-databinding = "8.7.2"
@@ -75,6 +77,7 @@ android-test-plugin-host-retention = "com.android.tools.utp:android-test-plugin-
 
 android-test-plugin-result-listener-gradle = "com.android.tools.utp:android-test-plugin-result-listener-gradle:_"
 
+appsprize = { module = "com.appsamurai.appsprize:appsprize", version.ref = "appsprize" }
 com-google-testing-platform-core = "com.google.testing.platform:core:_"
 
 desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
@@ -82,6 +85,7 @@ gdx = { module = "com.badlogicgames.gdx:gdx", version.ref = "gdxVersion" }
 gdx-freetype = { module = "com.badlogicgames.gdx:gdx-freetype", version.ref = "gdxVersion" }
 gdx-backend-android = { module = "com.badlogicgames.gdx:gdx-backend-android", version.ref = "gdxVersion" }
 gdx-box2d = { module = "com.badlogicgames.gdx:gdx-box2d", version.ref = "gdxVersion" }
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 launcher = "com.google.testing.platform:launcher:_"
 
 response-type-keeper = { group = "com.squareup.retrofit2", name = "response-type-keeper", version.ref = "retrofit2" }
