--- a/versions.properties
+++ b/versions.properties
@@ -25,7 +25,7 @@ version.okhttp3=4.12.0
 ##  # available=5.0.0-alpha.13
 ##  # available=5.0.0-alpha.14
 
-version.kotlin=2.0.10
+version.kotlin=2.1.0
 ## # available=2.0.20-Beta1
 ## # available=2.0.20-Beta2
 ## # available=2.0.20-RC
@@ -36,12 +36,17 @@ version.kotlin=2.0.10
 ## # available=2.1.0-Beta1
 ## # available=2.1.0-Beta2
 ## # available=2.1.0-RC
+## # available=2.1.0-RC2
+## # available=2.1.0
 
 version.junit.junit=4.13.2
 
+## failed to check repo https://artifactory.appodeal.com/appodeal/ Cause: network or server issue (class java.net.SocketTimeoutException Read timed out)
+## failed to check repo https://artifactory.appodeal.com/appodeal-beta-public/ Cause: network or server issue (class java.net.SocketTimeoutException timeout)
 version.google.play.app-update=2.1.0
 
-version.google.android.play-services-auth=21.2.0
+version.google.android.play-services-auth=21.3.0
+##                            # available=21.3.0
 
 ## unused
 version.google.android.play-services-ads=23.2.0
@@ -54,6 +59,7 @@ version.google.android.material=1.12.0
 ##                  # available=1.13.0-alpha05
 ##                  # available=1.13.0-alpha06
 ##                  # available=1.13.0-alpha07
+##                  # available=1.13.0-alpha08
 
 ## unused
 version.firebase-perf=21.0.1
@@ -73,12 +79,14 @@ version.firebase-firestore=25.0.0
 ## unused
 version.firebase-crashlytics=19.0.3
 
-version.firebase-bom=33.1.2
+version.firebase-bom=33.7.0
 ##       # available=33.2.0
 ##       # available=33.3.0
 ##       # available=33.4.0
 ##       # available=33.5.0
 ##       # available=33.5.1
+##       # available=33.6.0
+##       # available=33.7.0
 
 ## unused
 version.firebase-auth-ktx=23.0.0
@@ -99,7 +107,7 @@ version.firebase-analytics=22.0.2
 version.com.scottyab..rootbeer-lib=0.1.0
 
 ## unused
-version.com.google.guava..guava=33.2.1-android
+version.com.google.guava..guava=33.3.0-android
 ##                  # available=33.2.1-jre
 ##                  # available=33.3.0-android
 ##                  # available=33.3.0-jre
@@ -126,7 +134,7 @@ version.androidx.test.ext.junit=1.2.1
 
 version.androidx.test.espresso=3.6.1
 
-version.androidx.lifecycle=2.8.4
+version.androidx.lifecycle=2.8.7
 ##             # available=2.8.5
 ##             # available=2.8.6
 ##             # available=2.8.7
@@ -136,11 +144,12 @@ version.androidx.lifecycle=2.8.4
 ##             # available=2.9.0-alpha04
 ##             # available=2.9.0-alpha05
 ##             # available=2.9.0-alpha06
+##             # available=2.9.0-alpha07
 
 ## unused
 version.androidx.databinding=8.6.0
 
-version.androidx.credentials=1.2.2
+version.androidx.credentials=1.3.0
 ##               # available=1.3.0-alpha01
 ##               # available=1.3.0-alpha02
 ##               # available=1.3.0-alpha03
@@ -162,7 +171,7 @@ version.androidx.core-splashscreen=1.1.0-alpha02
 ##                     # available=1.2.0-alpha01
 ##                     # available=1.2.0-alpha02
 
-version.androidx.constraintlayout=2.1.4
+version.androidx.constraintlayout=2.2.0
 ##                    # available=2.2.0-alpha01
 ##                    # available=2.2.0-alpha02
 ##                    # available=2.2.0-alpha03
@@ -183,7 +192,7 @@ version.androidx.constraintlayout=2.1.4
 
 version.androidx.appcompat=1.7.0
 
-version.android.billingclient=7.0.0
+version.android.billingclient=7.1.1
 ##                # available=7.1.0
 ##                # available=7.1.1
 
@@ -191,7 +200,7 @@ plugin.com.google.gms.google-services=4.4.2
 
 plugin.com.google.firebase.firebase-perf=1.4.2
 
-plugin.com.google.firebase.crashlytics=2.9.9
+plugin.com.google.firebase.crashlytics=3.0.2
 ##                         # available=3.0.0
 ##                         # available=3.0.1
 ##                         # available=3.0.2
