--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 android.enableJetifier=true
 android.injected.testOnly=false
+org.gradle.configuration-cache=true
