--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,28 +13,18 @@ com-google-firebase-firebase-perf = { id = "com.google.firebase.firebase-perf", 
 [versions]
 
 appsprize = "2.0.0"
-desugar_jdk_libs = "2.0.4"
+desugar_jdk_libs = "2.1.3"
+##            ⬆ = "2.1.0"
+##            ⬆ = "2.1.1"
+##            ⬆ = "2.1.2"
+##            ⬆ = "2.1.3"
 gdxVersion = "1.13.0"
 glide = "4.16.0"
+## ⬆ = "5.0.0-rc01"
 retrofit2 = "2.11.0"
 
-androidx-databinding = "8.7.2"
-##                ⬆ = "8.6.1"
-##                ⬆ = "8.7.0-alpha01"
-##                ⬆ = "8.7.0-alpha02"
-##                ⬆ = "8.7.0-alpha03"
-##                ⬆ = "8.7.0-alpha04"
-##                ⬆ = "8.7.0-alpha05"
-##                ⬆ = "8.7.0-alpha06"
-##                ⬆ = "8.7.0-alpha07"
-##                ⬆ = "8.7.0-alpha08"
-##                ⬆ = "8.7.0-alpha09"
-##                ⬆ = "8.7.0-beta01"
-##                ⬆ = "8.7.0-beta02"
-##                ⬆ = "8.7.0-rc01"
-##                ⬆ = "8.7.0"
-##                ⬆ = "8.7.1"
-##                ⬆ = "8.7.2"
+androidx-databinding = "8.7.3"
+##                ⬆ = "8.7.3"
 ##                ⬆ = "8.8.0-alpha01"
 ##                ⬆ = "8.8.0-alpha02"
 ##                ⬆ = "8.8.0-alpha03"
@@ -44,12 +34,20 @@ androidx-databinding = "8.7.2"
 ##                ⬆ = "8.8.0-alpha07"
 ##                ⬆ = "8.8.0-alpha08"
 ##                ⬆ = "8.8.0-alpha09"
+##                ⬆ = "8.8.0-beta01"
+##                ⬆ = "8.8.0-rc01"
+##                ⬆ = "8.9.0-alpha01"
+##                ⬆ = "8.9.0-alpha02"
+##                ⬆ = "8.9.0-alpha03"
+##                ⬆ = "8.9.0-alpha04"
 
-google-android-play-services-ads = "23.5.0"
+google-android-play-services-ads = "23.6.0"
+##                            ⬆ = "23.6.0"
 
 firebase-appcheck-playintegrity = "18.0.0"
 
 firebase-appcheck-debug = "18.0.0"
+firebaseAuth = "23.1.0"
 
 [libraries]
 
@@ -122,3 +120,4 @@ cpx-research-sdk-android = "com.github.MakeOpinionGmbH:cpx-research-SDK-Android:
 volley = "com.android.volley:volley:1.2.1"
 
 spinninwheel = "com.adefruandta.spinningwheel:spinningwheel:0.1.0"
+firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
