added memory game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,15 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".activities.impl.games.MemoryGameActivity"
+            android:exported="true"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+        </activity>
+
 
         <activity
             android:name=".activities.LibGDXActivity"
